AsciiDoc ChangeLog
==================

:website: http://www.methods.co.nz/asciidoc/


Version 8.6.4 (2010-02-20)
--------------------------
.Additions and changes
- Vim syntax highlighter: highlight macros that start with an
  attribute reference (a common idiom).
- Vim syntax highlighter: highlight attribute references in macro
  attribute lists.
- Attribute entries can be used to set configuration markup templates.
- Double-width East Asian characters in titles now correctly match the
  title underline widths. Submitted by Changjian Gao (see
  http://groups.google.com/group/asciidoc/browse_thread/thread/77f28b0dfe60d262).
- Implemented {website}manpage.html[asciidoc(1)] filter commands, see:
  http://groups.google.com/group/asciidoc/browse_thread/thread/40c64cd33ee1905c
- User's home directory now calculated in a platform independent
  manner.
- Added double-quote characters to French language file.  Patch
  contributed Yves-Alexis Perez, see:
  http://groups.google.com/group/asciidoc/browse_thread/thread/e15282f072413940
- Vim Syntax highlighter: Highlight closing OpenBlocks which
  immediately follow a literal paragraph.
- Changed UNIX `/dev/null` to OS independent `os.devnull` in filters
  code.  Suggested by Herik Maier:
  http://groups.google.com/group/asciidoc/browse_thread/thread/5ac8e8ea895147e9
- Vim syntax highlighter: Single and double quoted text now highlights
  correctly when preceded by an attributes list.
- Added Ukrainian language file (`lang-uk.conf`). Added double-quote
  characters to Russian language file.conf). Patches contributed by
  Lavruschenko Oleksandr, see
  http://groups.google.com/group/asciidoc/browse_thread/thread/e15282f072413940
- Single and double quote characters are now set using the `{lsquo}`,
  `{rsquo}`, `{ldquo}` and `{rdquo}` attributes. This makes is easy to
  customise language specific quotes. See:
  http://groups.google.com/group/asciidoc/browse_thread/thread/e15282f072413940